# agh-apto

./: .gitignore
diaminy/: CMakeLists.txt
diaminy/inc/: Board.h  BoardSolver.h  GameState.h  exceptions.h  stdinc.h
diaminy/src/: Board.cpp  BoardSolver.cpp  GameState.cpp  all.cpp  main.cpp  test.cpp
docs/: document.tex
docs/document/: index.tex  preamble.tex  titlepage.tex
docs/document/tikz/: dfs-vs-bfs-bfs.tikz  dfs-vs-bfs-dfs.tikz  example-1-graph.tikz
examples/: 2  3  4  5  6  7  8  9
